Fix spacing for hunt collection items in hunt index active

--- a/frontend/src/stylesheets/components/hunt/_hunts_index_active.scss
+++ b/frontend/src/stylesheets/components/hunt/_hunts_index_active.scss
@@ -24,15 +24,22 @@
   width: 18%;
   height: 80%;
   border: 15px solid white;
+  background-color: $blue;
 }
 
 .hunts-collection-list-active{
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   align-items: center;
   width: 87%;
   height: 90%;
+}
+
+.mini-cards-active {
+  height: 100px;
+  width: 120px;
+  margin-bottom: 70px;
 }
 
 .hunt-photo-collection-active {
@@ -42,6 +49,7 @@
   align-items: center;
   box-sizing: border-box;
   padding: 10px;
+  background-color: $red;
   border-radius: 25px;
   height: 70%;
   width: 100%;
